test/netlist/error/used-unused.bop
A(a) = c
with unused = b
where
  b = Not(a);
  c = Id(b);
end where;
